test/error/parsing_files/semi_err02.err
File "parsing_files/semi_err02.st", line 1, characters 7-8:
1 | f := (: int).
          ^
Error: Syntax error.
Hint: Cannot have ':' after "(".
